(lang dune 2.0)
(name index-tezos)
(implicit_transitive_deps false)

(generate_opam_files true)
(source (github icristescu/index-tezos))
(maintainers "Ioana Cristescu <ioana@tarides.com>")
(authors "Ioana Cristescu <ioana@tarides.com>")

(package
 (name index-tezos)
 (synopsis "")
 (description "")
 (documentation https://github.com/icristescu/index-tezos.git))